@@ -1,18 +1,18 @@
 /*
  * The MIT License
- * 
+ *
  * Copyright (c) 2004-2009, Sun Microsystems, Inc., Kohsuke Kawaguchi
- * 
+ *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
  * in the Software without restriction, including without limitation the rights
  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  * copies of the Software, and to permit persons to whom the Software is
  * furnished to do so, subject to the following conditions:
- * 
+ *
  * The above copyright notice and this permission notice shall be included in
  * all copies or substantial portions of the Software.
- * 
+ *
  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -21,6 +21,7 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package hudson.util;
 
 import com.thoughtworks.xstream.converters.Converter;
@@ -31,23 +32,24 @@ import com.thoughtworks.xstream.io.HierarchicalStreamReader;
 import com.thoughtworks.xstream.io.HierarchicalStreamWriter;
 import com.thoughtworks.xstream.mapper.Mapper;
 import hudson.model.AbstractProject;
-import jenkins.model.DependencyDeclarer;
 import hudson.model.DependencyGraph;
 import hudson.model.Describable;
 import hudson.model.Descriptor;
 import hudson.model.Descriptor.FormException;
 import hudson.model.ReconfigurableDescribable;
 import hudson.model.Saveable;
-import net.sf.json.JSONObject;
-import org.kohsuke.stapler.StaplerRequest;
-
 import java.io.IOException;
+import java.io.UncheckedIOException;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.logging.Level;
 import java.util.logging.Logger;
+import jenkins.model.DependencyDeclarer;
+import net.sf.json.JSONObject;
+import org.kohsuke.stapler.StaplerRequest;
 
 /**
  * Persisted list of {@link Describable}s with some operations specific
@@ -69,7 +71,7 @@ public class DescribableList<T extends Describable<T>, D extends Descriptor<T>> 
 
     /**
      * @deprecated since 2008-08-15.
-     *      Use {@link #DescribableList(Saveable)} 
+     *      Use {@link #DescribableList(Saveable)}
      */
     @Deprecated
     public DescribableList(Owner owner) {
@@ -98,7 +100,7 @@ public class DescribableList<T extends Describable<T>, D extends Descriptor<T>> 
      * Removes all instances of the same type, then add the new one.
      */
     public void replace(T item) throws IOException {
-        removeAll((Class)item.getClass());
+        removeAll((Class) item.getClass());
         data.add(item);
         onModified();
     }
@@ -109,7 +111,7 @@ public class DescribableList<T extends Describable<T>, D extends Descriptor<T>> 
     public T getDynamic(String id) {
         // by ID
         for (T t : data)
-            if(t.getDescriptor().getId().equals(id))
+            if (t.getDescriptor().getId().equals(id))
                 return t;
 
         // by position
@@ -124,18 +126,18 @@ public class DescribableList<T extends Describable<T>, D extends Descriptor<T>> 
 
     public T get(D descriptor) {
         for (T t : data)
-            if(t.getDescriptor()==descriptor)
+            if (t.getDescriptor() == descriptor)
                 return t;
         return null;
     }
 
     public boolean contains(D d) {
-        return get(d)!=null;
+        return get(d) != null;
     }
 
     public void remove(D descriptor) throws IOException {
         for (T t : data) {
-            if(t.getDescriptor()==descriptor) {
+            if (t.getDescriptor() == descriptor) {
                 data.remove(t);
                 onModified();
                 return;
@@ -147,8 +149,8 @@ public class DescribableList<T extends Describable<T>, D extends Descriptor<T>> 
      * Creates a detached map from the current snapshot of the data, keyed from a descriptor to an instance.
      */
     @SuppressWarnings("unchecked")
-    public Map<D,T> toMap() {
-        return (Map)Descriptor.toMap(data);
+    public Map<D, T> toMap() {
+        return (Map) Descriptor.toMap(data);
     }
 
     /**
@@ -165,22 +167,22 @@ public class DescribableList<T extends Describable<T>, D extends Descriptor<T>> 
         List<T> newList = new ArrayList<>();
 
         for (Descriptor<T> d : descriptors) {
-            T existing = get((D)d);
+            T existing = get((D) d);
             String name = d.getJsonSafeClassName();
             JSONObject o = json.optJSONObject(name);
 
             T instance = null;
-            if (o!=null) {
+            if (o != null) {
                 if (existing instanceof ReconfigurableDescribable)
-                    instance = (T)((ReconfigurableDescribable)existing).reconfigure(req,o);
+                    instance = (T) ((ReconfigurableDescribable) existing).reconfigure(req, o);
                 else
                     instance = d.newInstance(req, o);
             } else {
                 if (existing instanceof ReconfigurableDescribable)
-                    instance = (T)((ReconfigurableDescribable)existing).reconfigure(req,null);
+                    instance = (T) ((ReconfigurableDescribable) existing).reconfigure(req, null);
             }
 
-            if (instance!=null)
+            if (instance != null)
                 newList.add(instance);
         }
 
@@ -193,7 +195,7 @@ public class DescribableList<T extends Describable<T>, D extends Descriptor<T>> 
      */
     @Deprecated
     public void rebuild(StaplerRequest req, JSONObject json, List<? extends Descriptor<T>> descriptors, String prefix) throws FormException, IOException {
-        rebuild(req,json,descriptors);
+        rebuild(req, json, descriptors);
     }
 
     /**
@@ -205,20 +207,20 @@ public class DescribableList<T extends Describable<T>, D extends Descriptor<T>> 
      * significant.
      */
     public void rebuildHetero(StaplerRequest req, JSONObject formData, Collection<? extends Descriptor<T>> descriptors, String key) throws FormException, IOException {
-        replaceBy(Descriptor.newInstancesFromHeteroList(req,formData,key,descriptors));
+        replaceBy(Descriptor.newInstancesFromHeteroList(req, formData, key, descriptors));
     }
 
     /**
      * Picks up {@link DependencyDeclarer}s and allow it to build dependencies.
      */
-    public void buildDependencyGraph(AbstractProject owner,DependencyGraph graph) {
+    public void buildDependencyGraph(AbstractProject owner, DependencyGraph graph) {
         for (Object o : this) {
             if (o instanceof DependencyDeclarer) {
                 DependencyDeclarer dd = (DependencyDeclarer) o;
                 try {
-                    dd.buildDependencyGraph(owner,graph);
+                    dd.buildDependencyGraph(owner, graph);
                 } catch (RuntimeException e) {
-                    LOGGER.log(Level.SEVERE, "Failed to build dependency graph for " + owner,e);
+                    LOGGER.log(Level.SEVERE, "Failed to build dependency graph for " + owner, e);
                 }
             }
         }
@@ -230,6 +232,7 @@ public class DescribableList<T extends Describable<T>, D extends Descriptor<T>> 
     get(Ljava/lang/Class;)Ljava/lang/Object; from PersistedList where we need
     get(Ljava/lang/Class;)Lhudson/model/Describable;
  */
+    @Override
     public <U extends T> U get(Class<U> type) {
         return super.get(type);
     }
@@ -259,22 +262,29 @@ public class DescribableList<T extends Describable<T>, D extends Descriptor<T>> 
             copyOnWriteListConverter = new CopyOnWriteList.ConverterImpl(mapper());
         }
 
+        @Override
         public boolean canConvert(Class type) {
             // handle subtypes in case the onModified method is overridden.
             return DescribableList.class.isAssignableFrom(type);
         }
 
+        @Override
         public void marshal(Object source, HierarchicalStreamWriter writer, MarshallingContext context) {
             for (Object o : (DescribableList) source)
                 writeItem(o, context, writer);
         }
 
+        @Override
         public Object unmarshal(HierarchicalStreamReader reader, UnmarshallingContext context) {
             try {
-                DescribableList r = (DescribableList) context.getRequiredType().asSubclass(DescribableList.class).newInstance();
+                DescribableList r = (DescribableList) context.getRequiredType().asSubclass(DescribableList.class).getDeclaredConstructor().newInstance();
                 CopyOnWriteList core = copyOnWriteListConverter.unmarshal(reader, context);
                 r.data.replaceBy(core);
                 return r;
+            } catch (NoSuchMethodException e) {
+                NoSuchMethodError x = new NoSuchMethodError();
+                x.initCause(e);
+                throw x;
             } catch (InstantiationException e) {
                 InstantiationError x = new InstantiationError();
                 x.initCause(e);
@@ -283,9 +293,22 @@ public class DescribableList<T extends Describable<T>, D extends Descriptor<T>> 
                 IllegalAccessError x = new IllegalAccessError();
                 x.initCause(e);
                 throw x;
+            } catch (InvocationTargetException e) {
+                Throwable t = e.getCause();
+                if (t instanceof RuntimeException) {
+                    throw (RuntimeException) t;
+                } else if (t instanceof IOException) {
+                    throw new UncheckedIOException((IOException) t);
+                } else if (t instanceof Exception) {
+                    throw new RuntimeException(t);
+                } else if (t instanceof Error) {
+                    throw (Error) t;
+                } else {
+                    throw new Error(e);
+                }
             }
         }
     }
 
-    private final static Logger LOGGER = Logger.getLogger(DescribableList.class.getName());
+    private static final Logger LOGGER = Logger.getLogger(DescribableList.class.getName());
 }
