@@ -24,10 +24,15 @@
 
 package jenkins.model;
 
+import static javax.servlet.http.HttpServletResponse.SC_CONFLICT;
+import static javax.servlet.http.HttpServletResponse.SC_CREATED;
+
+import edu.umd.cs.findbugs.annotations.CheckForNull;
 import hudson.Util;
 import hudson.cli.declarative.CLIMethod;
 import hudson.cli.declarative.CLIResolver;
 import hudson.model.Action;
+import hudson.model.BuildAuthorizationToken;
 import hudson.model.BuildableItem;
 import hudson.model.Cause;
 import hudson.model.CauseAction;
@@ -54,10 +59,7 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.TimeUnit;
-import edu.umd.cs.findbugs.annotations.CheckForNull;
 import javax.servlet.ServletException;
-import static javax.servlet.http.HttpServletResponse.SC_CREATED;
-import static javax.servlet.http.HttpServletResponse.SC_CONFLICT;
 import jenkins.model.lazy.LazyBuildMixIn;
 import jenkins.triggers.SCMTriggerItem;
 import jenkins.util.TimeDuration;
@@ -90,7 +92,7 @@ import org.kohsuke.stapler.interceptor.RequirePOST;
  */
 @SuppressWarnings("unchecked") // AbstractItem.getParent does not correctly override; scheduleBuild2 inherently untypable
 public abstract class ParameterizedJobMixIn<JobT extends Job<JobT, RunT> & ParameterizedJobMixIn.ParameterizedJob<JobT, RunT> & Queue.Task, RunT extends Run<JobT, RunT> & Queue.Executable> {
-    
+
     protected abstract JobT asJob();
 
     /** @see BuildableItem#scheduleBuild() */
@@ -112,7 +114,7 @@ public abstract class ParameterizedJobMixIn<JobT extends Job<JobT, RunT> & Param
 
     /** @see BuildableItem#scheduleBuild(int, Cause) */
     public final boolean scheduleBuild(int quietPeriod, Cause c) {
-        return scheduleBuild2(quietPeriod, c != null ? Collections.singletonList(new CauseAction(c)) : Collections.emptyList()) != null;
+        return scheduleBuild2(quietPeriod, c != null ? List.of(new CauseAction(c)) : Collections.emptyList()) != null;
     }
 
     /**
@@ -130,10 +132,12 @@ public abstract class ParameterizedJobMixIn<JobT extends Job<JobT, RunT> & Param
      * @param job a job which might be schedulable
      * @param quietPeriod seconds to wait before starting; use {@code -1} to use the job’s default settings
      * @param actions various actions to associate with the scheduling, such as {@link ParametersAction} or {@link CauseAction}
-     * @return a newly created, or reused, queue item if the job could be scheduled; null if it was refused for some reason (e.g., some {@link Queue.QueueDecisionHandler} rejected it), or if {@code job} is not a {@link ParameterizedJob} or it is not {@link Job#isBuildable})
+     * @return a newly created, or reused, queue item if the job could be scheduled;
+     *      null if it was refused for some reason (e.g., some {@link Queue.QueueDecisionHandler} rejected it),
+     *      or if {@code job} is not a {@link ParameterizedJob} or it is not {@link Job#isBuildable})
      * @since 1.621
      */
-    public static @CheckForNull Queue.Item scheduleBuild2(final Job<?,?> job, int quietPeriod, Action... actions) {
+    public static @CheckForNull Queue.Item scheduleBuild2(final Job<?, ?> job, int quietPeriod, Action... actions) {
         if (!(job instanceof ParameterizedJob)) {
             return null;
         }
@@ -162,15 +166,15 @@ public abstract class ParameterizedJobMixIn<JobT extends Job<JobT, RunT> & Param
         /*
          * This check is made ONLY if someone will call this method even if isParametrized() is false.
          */
-        if(paramDefProp == null)
+        if (paramDefProp == null)
             return defValues;
 
         /* Scan for all parameter with an associated default values */
-        for(ParameterDefinition paramDefinition : paramDefProp.getParameterDefinitions())
+        for (ParameterDefinition paramDefinition : paramDefProp.getParameterDefinitions())
         {
            ParameterValue defaultValue  = paramDefinition.getDefaultParameterValue();
 
-            if(defaultValue != null)
+            if (defaultValue != null)
                 defValues.add(defaultValue);
         }
 
@@ -190,7 +194,7 @@ public abstract class ParameterizedJobMixIn<JobT extends Job<JobT, RunT> & Param
     @SuppressWarnings("deprecation")
     public final void doBuild(StaplerRequest req, StaplerResponse rsp, @QueryParameter TimeDuration delay) throws IOException, ServletException {
         if (delay == null) {
-            delay=new TimeDuration(TimeUnit.MILLISECONDS.convert(asJob().getQuietPeriod(), TimeUnit.SECONDS));
+            delay = new TimeDuration(TimeUnit.MILLISECONDS.convert(asJob().getQuietPeriod(), TimeUnit.SECONDS));
         }
 
         if (!asJob().isBuildable()) {
@@ -205,7 +209,7 @@ public abstract class ParameterizedJobMixIn<JobT extends Job<JobT, RunT> & Param
             return;
         }
 
-        hudson.model.BuildAuthorizationToken.checkPermission(asJob(), asJob().getAuthToken(), req, rsp);
+        BuildAuthorizationToken.checkPermission(asJob(), asJob().getAuthToken(), req, rsp);
 
         if (pp != null) {
             pp._doBuild(req, rsp, delay);
@@ -226,7 +230,7 @@ public abstract class ParameterizedJobMixIn<JobT extends Job<JobT, RunT> & Param
      */
     @SuppressWarnings("deprecation")
     public final void doBuildWithParameters(StaplerRequest req, StaplerResponse rsp, @QueryParameter TimeDuration delay) throws IOException, ServletException {
-        hudson.model.BuildAuthorizationToken.checkPermission(asJob(), asJob().getAuthToken(), req, rsp);
+        BuildAuthorizationToken.checkPermission(asJob(), asJob().getAuthToken(), req, rsp);
 
         ParametersDefinitionProperty pp = asJob().getProperty(ParametersDefinitionProperty.class);
         if (!asJob().isBuildable()) {
@@ -243,7 +247,7 @@ public abstract class ParameterizedJobMixIn<JobT extends Job<JobT, RunT> & Param
      * Standard implementation of {@link ParameterizedJob#doCancelQueue}.
      */
     @RequirePOST
-    public final void doCancelQueue( StaplerRequest req, StaplerResponse rsp ) throws IOException, ServletException {
+    public final void doCancelQueue(StaplerRequest req, StaplerResponse rsp) throws IOException, ServletException {
         asJob().checkPermission(Item.CANCEL);
         Jenkins.get().getQueue().cancel(asJob());
         rsp.forwardToPreviousPage(req);
@@ -268,7 +272,7 @@ public abstract class ParameterizedJobMixIn<JobT extends Job<JobT, RunT> & Param
     public static CauseAction getBuildCause(ParameterizedJob job, StaplerRequest req) {
         Cause cause;
         @SuppressWarnings("deprecation")
-        hudson.model.BuildAuthorizationToken authToken = job.getAuthToken();
+        BuildAuthorizationToken authToken = job.getAuthToken();
         if (authToken != null && authToken.getToken() != null && req.getParameter("token") != null) {
             // Optional additional cause text when starting via token
             String causeText = req.getParameter("cause");
@@ -302,7 +306,7 @@ public abstract class ParameterizedJobMixIn<JobT extends Job<JobT, RunT> & Param
      * @return a configured trigger of the requested type, or null if there is none such, or {@code job} is not a {@link ParameterizedJob}
      * @since 1.621
      */
-    public static @CheckForNull <T extends Trigger<?>> T getTrigger(Job<?,?> job, Class<T> clazz) {
+    public static @CheckForNull <T extends Trigger<?>> T getTrigger(Job<?, ?> job, Class<T> clazz) {
         if (!(job instanceof ParameterizedJob)) {
             return null;
         }
@@ -325,7 +329,7 @@ public abstract class ParameterizedJobMixIn<JobT extends Job<JobT, RunT> & Param
         @Restricted(DoNotUse.class)
         @SuppressWarnings("rawtypes")
         @CLIResolver
-        static ParameterizedJob resolveForCLI(@Argument(required=true, metaVar="NAME", usage="Job name") String name) throws CmdLineException {
+        static ParameterizedJob resolveForCLI(@Argument(required = true, metaVar = "NAME", usage = "Job name") String name) throws CmdLineException {
             ParameterizedJob item = Jenkins.get().getItemByFullName(name, ParameterizedJob.class);
             if (item == null) {
                 ParameterizedJob project = Items.findNearest(ParameterizedJob.class, name, Jenkins.get());
@@ -350,7 +354,7 @@ public abstract class ParameterizedJobMixIn<JobT extends Job<JobT, RunT> & Param
         }
 
         @SuppressWarnings("deprecation")
-        @CheckForNull hudson.model.BuildAuthorizationToken getAuthToken();
+        @CheckForNull BuildAuthorizationToken getAuthToken();
 
         /**
          * Quiet period for the job.
@@ -375,7 +379,7 @@ public abstract class ParameterizedJobMixIn<JobT extends Job<JobT, RunT> & Param
          * @return a map from trigger kind to instance
          * @see #getTrigger
          */
-        Map<TriggerDescriptor,Trigger<?>> getTriggers();
+        Map<TriggerDescriptor, Trigger<?>> getTriggers();
 
         @Override
         default boolean scheduleBuild(Cause c) {
@@ -421,7 +425,7 @@ public abstract class ParameterizedJobMixIn<JobT extends Job<JobT, RunT> & Param
          * @see ParameterizedJobMixIn#doCancelQueue
          */
         @RequirePOST
-        default void doCancelQueue(StaplerRequest req, StaplerResponse rsp ) throws IOException, ServletException {
+        default void doCancelQueue(StaplerRequest req, StaplerResponse rsp) throws IOException, ServletException {
             getParameterizedJobMixIn().doCancelQueue(req, rsp);
         }
 
@@ -434,7 +438,7 @@ public abstract class ParameterizedJobMixIn<JobT extends Job<JobT, RunT> & Param
                 rsp.sendError(404);
                 return;
             }
-            hudson.model.BuildAuthorizationToken.checkPermission((Job) this, getAuthToken(), req, rsp);
+            BuildAuthorizationToken.checkPermission((Job) this, getAuthToken(), req, rsp);
             ((SCMTriggerItem) this).schedulePolling();
             rsp.sendRedirect(".");
         }
@@ -485,7 +489,7 @@ public abstract class ParameterizedJobMixIn<JobT extends Job<JobT, RunT> & Param
             ItemListener.fireOnUpdated(this);
         }
 
-        @CLIMethod(name="disable-job")
+        @CLIMethod(name = "disable-job")
         @RequirePOST
         default HttpResponse doDisable() throws IOException, ServletException {
             checkPermission(CONFIGURE);
@@ -493,7 +497,7 @@ public abstract class ParameterizedJobMixIn<JobT extends Job<JobT, RunT> & Param
             return new HttpRedirect(".");
         }
 
-        @CLIMethod(name="enable-job")
+        @CLIMethod(name = "enable-job")
         @RequirePOST
         default HttpResponse doEnable() throws IOException, ServletException {
             checkPermission(CONFIGURE);
