@@ -21,13 +21,13 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
-package jenkins.model.lazy;
 
-import org.apache.commons.io.FileUtils;
+package jenkins.model.lazy;
 
 import java.io.File;
 import java.io.IOException;
 import java.nio.charset.Charset;
+import java.nio.file.Files;
 
 /**
  * @author Kohsuke Kawaguchi
@@ -44,25 +44,8 @@ public class FakeMap extends AbstractLazyLoadRunMap<Build> {
 
     @Override
     protected Build retrieve(File dir) throws IOException {
-        String n = FileUtils.readFileToString(new File(dir, "n"), Charset.defaultCharset()).trim();
+        String n = Files.readString(dir.toPath().resolve("n"), Charset.defaultCharset()).trim();
         //new Exception("loading #" + n).printStackTrace();
         return new Build(Integer.parseInt(n));
     }
-}
-
-class Build {
-    final int n;
-
-    Build(int n) {
-        this.n = n;
-    }
-
-    public void asserts(int n) {
-        assert this.n==n;
-    }
-
-    @Override public String toString() {
-        return "Build #" + n + " @" + hashCode();
-    }
-
 }
