@@ -24,38 +24,34 @@
 
 package hudson.model;
 
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotEquals;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertNull;
+
 import hudson.PluginWrapper;
-import hudson.PluginWrapper.Dependency;
 import hudson.model.UpdateSite.Data;
 import hudson.util.FormValidation;
 import hudson.util.PersistedList;
-
 import java.io.File;
 import java.io.IOException;
 import java.net.URISyntaxException;
 import java.net.URL;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashSet;
+import java.util.List;
 import java.util.jar.Attributes;
 import java.util.jar.Manifest;
-
-import javax.servlet.ServletException;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
-
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
-
 import jenkins.model.Jenkins;
 import jenkins.security.UpdateSiteWarningsConfiguration;
 import jenkins.security.UpdateSiteWarningsMonitor;
-import org.apache.commons.io.FileUtils;
 import org.eclipse.jetty.server.Request;
 import org.eclipse.jetty.server.Server;
 import org.eclipse.jetty.server.ServerConnector;
@@ -64,7 +60,6 @@ import org.junit.After;
 import org.junit.Before;
 import org.junit.Rule;
 import org.junit.Test;
-import org.jvnet.hudson.test.Issue;
 import org.jvnet.hudson.test.JenkinsRule;
 
 public class UpdateSiteTest {
@@ -78,15 +73,14 @@ public class UpdateSiteTest {
     private String getResource(String resourceName) throws IOException {
         try {
             URL url = UpdateSiteTest.class.getResource(resourceName);
-            return (url != null)?FileUtils.readFileToString(new File(url.toURI())):null;
-        } catch(URISyntaxException e) {
+            return url != null ? Files.readString(Paths.get(url.toURI()), StandardCharsets.UTF_8) : null;
+        } catch (URISyntaxException e) {
             return null;
         }
     }
 
     /**
      * Startup a web server to access resources via HTTP.
-     * @throws Exception 
      */
     @Before
     public void setUpWebServer() throws Exception {
@@ -95,7 +89,7 @@ public class UpdateSiteTest {
         server.addConnector(connector);
         server.setHandler(new AbstractHandler() {
             @Override
-            public void handle(String target, Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException, ServletException {
+            public void handle(String target, Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException {
                 if (target.startsWith(RELATIVE_BASE)) {
                     target = target.substring(RELATIVE_BASE.length());
                 }
@@ -104,7 +98,7 @@ public class UpdateSiteTest {
                     baseRequest.setHandled(true);
                     response.setContentType("text/plain; charset=utf-8");
                     response.setStatus(HttpServletResponse.SC_OK);
-                    response.getOutputStream().write(responseBody.getBytes());
+                    response.getOutputStream().write(responseBody.getBytes(StandardCharsets.UTF_8));
                 }
             }
         });
@@ -116,40 +110,40 @@ public class UpdateSiteTest {
     public void shutdownWebserver() throws Exception {
         server.stop();
     }
-    
+
     @Test public void relativeURLs() throws Exception {
-        URL url = new URL(baseUrl, "/plugins/tasks-update-center.json");
+        URL url = new URL(baseUrl, "/plugins/htmlpublisher-update-center.json");
         UpdateSite site = new UpdateSite(UpdateCenter.ID_DEFAULT, url.toString());
         overrideUpdateSite(site);
         assertEquals(FormValidation.ok(), site.updateDirectly(false).get());
         Data data = site.getData();
         assertNotNull(data);
         assertEquals(new URL(url, "jenkins.war").toString(), data.core.url);
-        assertEquals(new HashSet<String>(Arrays.asList("tasks", "dummy")), data.plugins.keySet());
-        assertEquals(new URL(url, "tasks.jpi").toString(), data.plugins.get("tasks").url);
+        assertEquals(new HashSet<>(Arrays.asList("htmlpublisher", "dummy")), data.plugins.keySet());
+        assertEquals(new URL(url, "htmlpublisher.jpi").toString(), data.plugins.get("htmlpublisher").url);
         assertEquals("http://nowhere.net/dummy.hpi", data.plugins.get("dummy").url);
 
-        UpdateSite.Plugin tasksPlugin = data.plugins.get("tasks");
-        assertEquals("Wrong name of plugin found", "Task Scanner Plug-in", tasksPlugin.getDisplayName());
+        UpdateSite.Plugin htmlPublisherPlugin = data.plugins.get("htmlpublisher");
+        assertEquals("Wrong name of plugin found", "HTML Publisher", htmlPublisherPlugin.getDisplayName());
     }
 
     @Test public void wikiUrlFromSingleSite() throws Exception {
-        UpdateSite site = getUpdateSite("/plugins/tasks-update-center.json");
+        UpdateSite site = getUpdateSite("/plugins/htmlpublisher-update-center.json");
         overrideUpdateSite(site);
         PluginWrapper wrapper = buildPluginWrapper("dummy", "https://wiki.jenkins.io/display/JENKINS/dummy");
         assertEquals("https://plugins.jenkins.io/dummy", wrapper.getUrl());
     }
 
     @Test public void wikiUrlFromMoreSites() throws Exception {
-        UpdateSite site = getUpdateSite("/plugins/tasks-update-center.json");
+        UpdateSite site = getUpdateSite("/plugins/htmlpublisher-update-center.json");
         UpdateSite alternativeSite = getUpdateSite("/plugins/alternative-update-center.json", "alternative");
         overrideUpdateSite(site, alternativeSite);
-        // sites use different Wiki URL for dummy -> use URL from manifest 
+        // sites use different Wiki URL for dummy -> use URL from manifest
         PluginWrapper wrapper = buildPluginWrapper("dummy", "https://wiki.jenkins.io/display/JENKINS/dummy");
         assertEquals("https://wiki.jenkins.io/display/JENKINS/dummy", wrapper.getUrl());
-        // sites use the same Wiki URL for tasks -> use it
-        wrapper = buildPluginWrapper("tasks", "https://wiki.jenkins.io/display/JENKINS/tasks");
-        assertEquals("https://plugins.jenkins.io/tasks", wrapper.getUrl());
+        // sites use the same Wiki URL for HTML Publisher -> use it
+        wrapper = buildPluginWrapper("htmlpublisher", "https://plugins.jenkins.io/htmlpublisher");
+        assertEquals("https://plugins.jenkins.io/htmlpublisher", wrapper.getUrl());
         // only one site has it
         wrapper = buildPluginWrapper("foo", "https://wiki.jenkins.io/display/JENKINS/foo");
         assertEquals("https://plugins.jenkins.io/foo", wrapper.getUrl());
@@ -162,7 +156,7 @@ public class UpdateSiteTest {
         assertNotNull(us.getPlugin("AdaptivePlugin"));
     }
 
-    @Test public void lackOfDataDoesNotFailWarningsCode() throws Exception {
+    @Test public void lackOfDataDoesNotFailWarningsCode() {
         assertNull("plugin data is not present", j.jenkins.getUpdateCenter().getSite("default").getData());
 
         // nothing breaking?
@@ -178,43 +172,11 @@ public class UpdateSiteTest {
         assertNotEquals("plugin data is present", Collections.emptyMap(), site.getData().plugins);
     }
 
-    @Issue("JENKINS-56477")
-    @Test
-    public void isPluginUpdateCompatible() throws Exception {
-        UpdateSite site = getUpdateSite("/plugins/minJavaVersion-update-center.json");
-        final UpdateSite.Plugin tasksPlugin = site.getPlugin("tasks");
-        assertNotNull(tasksPlugin);
-        assertFalse(tasksPlugin.isNeededDependenciesForNewerJava());
-        assertFalse(tasksPlugin.isForNewerJava());
-        assertTrue(tasksPlugin.isCompatible());
-    }
-
-    @Issue("JENKINS-55048")
-    @Test public void minimumJavaVersion() throws Exception {
-        UpdateSite site = getUpdateSite("/plugins/minJavaVersion-update-center.json");
-
-        final UpdateSite.Plugin tasksPlugin = site.getPlugin("tasks");
-        assertNotNull(tasksPlugin);
-        assertFalse(tasksPlugin.isNeededDependenciesForNewerJava());
-        assertFalse(tasksPlugin.isForNewerJava());
-
-        final UpdateSite.Plugin pluginCompiledForTooRecentJava = site.getPlugin("java-too-recent");
-        assertFalse(pluginCompiledForTooRecentJava.isNeededDependenciesForNewerJava());
-        assertTrue(pluginCompiledForTooRecentJava.isForNewerJava());
-
-        final UpdateSite.Plugin pluginDependingOnPluginCompiledForTooRecentJava = site.getPlugin("depending-on-too-recent-java");
-        assertTrue(pluginDependingOnPluginCompiledForTooRecentJava.isNeededDependenciesForNewerJava());
-        assertFalse(pluginDependingOnPluginCompiledForTooRecentJava.isForNewerJava());
-
-    }
-
-    @Issue("JENKINS-31448")
-    @Test public void isLegacyDefault() throws Exception {
-        assertFalse("isLegacyDefault should be false with null id",new UpdateSite(null,"url").isLegacyDefault());
-        assertFalse("isLegacyDefault should be false when id is not default and url is http://hudson-ci.org/",new UpdateSite("dummy","http://hudson-ci.org/").isLegacyDefault());
-        assertTrue("isLegacyDefault should be true when id is default and url is http://hudson-ci.org/",new UpdateSite(UpdateCenter.PREDEFINED_UPDATE_SITE_ID,"http://hudson-ci.org/").isLegacyDefault());
-        assertTrue("isLegacyDefault should be true when url is http://updates.hudson-labs.org/",new UpdateSite("dummy","http://updates.hudson-labs.org/").isLegacyDefault());
-        assertFalse("isLegacyDefault should be false with null url",new UpdateSite(null,null).isLegacyDefault());
+    @Test public void getAvailables() throws Exception {
+        UpdateSite site = getUpdateSite("/plugins/available-update-center.json");
+        List<UpdateSite.Plugin> available = site.getAvailables();
+        assertEquals("ALowTitle", available.get(0).getDisplayName());
+        assertEquals("TheHighTitle", available.get(1).getDisplayName());
     }
 
     private UpdateSite getUpdateSite(String path) throws Exception {
@@ -248,7 +210,7 @@ public class UpdateSiteTest {
                 null,
                 new File("/tmp/" + name + ".jpi.disabled"),
                 null,
-                new ArrayList<Dependency>()
+                new ArrayList<>()
         );
     }
 }
