@@ -1,36 +1,34 @@
 package hudson.util;
 
-import hudson.WebAppMain;
-import hudson.model.Hudson;
-import hudson.model.listeners.ItemListener;
-import java.io.File;
-import java.io.IOException;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
-import javax.servlet.ServletContext;
-import javax.servlet.ServletContextEvent;
-import jenkins.model.Jenkins;
-import org.apache.commons.io.FileUtils;
-import org.eclipse.jetty.util.component.AbstractLifeCycle;
-import org.junit.After;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
 
+import hudson.WebAppMain;
+import hudson.model.Hudson;
+import hudson.model.listeners.ItemListener;
+import java.io.File;
+import java.io.IOException;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+import javax.servlet.ServletContext;
+import javax.servlet.ServletContextEvent;
+import jenkins.model.Jenkins;
+import org.junit.After;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.TemporaryFolder;
-import org.jvnet.hudson.test.HudsonHomeLoader;
 import org.jvnet.hudson.test.Issue;
 import org.jvnet.hudson.test.JenkinsRule;
 import org.jvnet.hudson.test.NoListenerConfiguration;
 import org.jvnet.hudson.test.TestEnvironment;
 import org.jvnet.hudson.test.TestExtension;
 import org.kohsuke.stapler.WebApp;
-import org.springframework.util.Assert;
 
 /**
  *
@@ -46,7 +44,7 @@ public class BootFailureTest {
 
     static class CustomRule extends JenkinsRule {
         @Override
-        public void before() throws Throwable {
+        public void before() {
             env = new TestEnvironment(testDescription);
             env.pin();
             // don't let Jenkins start automatically
@@ -71,14 +69,14 @@ public class BootFailureTest {
             ServletContext ws = createWebServer((context, server) -> {
                 NoListenerConfiguration noListenerConfiguration = context.getBean(NoListenerConfiguration.class);
                 // future-proof
-                Assert.notNull(noListenerConfiguration);
+                assertNotNull(noListenerConfiguration);
                 if (noListenerConfiguration != null) {
                     context.removeBean(noListenerConfiguration);
-                    context.addBean(new AbstractLifeCycle() {
-                        @Override 
-                        protected void doStart() throws Exception {
+                    context.addBean(new NoListenerConfiguration(context) {
+                        @Override
+                        protected void doStart() {
                             // default behavior of noListenerConfiguration
-                            context.setEventListeners(null);
+                            super.doStart();
                             // ensuring our custom context will received the contextInitialized event
                             context.addEventListener(wa);
                         }
@@ -94,6 +92,7 @@ public class BootFailureTest {
             return null;    // didn't boot
         }
     }
+
     @Rule
     public CustomRule j = new CustomRule();
 
@@ -119,19 +118,14 @@ public class BootFailureTest {
     @Test
     public void runBootFailureScript() throws Exception {
         final File home = tmpDir.newFolder();
-        j.with(new HudsonHomeLoader() {
-            @Override
-            public File allocate() throws Exception {
-                return home;
-            }
-        });
+        j.with(() -> home);
 
         // creates a script
-        FileUtils.write(new File(home, "boot-failure.groovy"), "hudson.util.BootFailureTest.problem = exception");
-        File d = new File(home, "boot-failure.groovy.d");
-        d.mkdirs();
-        FileUtils.write(new File(d, "1.groovy"), "hudson.util.BootFailureTest.runRecord << '1'");
-        FileUtils.write(new File(d, "2.groovy"), "hudson.util.BootFailureTest.runRecord << '2'");
+        Files.writeString(home.toPath().resolve("boot-failure.groovy"), "hudson.util.BootFailureTest.problem = exception", StandardCharsets.UTF_8);
+        Path d = home.toPath().resolve("boot-failure.groovy.d");
+        Files.createDirectory(d);
+        Files.writeString(d.resolve("1.groovy"), "hudson.util.BootFailureTest.runRecord << '1'", StandardCharsets.UTF_8);
+        Files.writeString(d.resolve("2.groovy"), "hudson.util.BootFailureTest.runRecord << '2'", StandardCharsets.UTF_8);
 
         // first failed boot
         makeBootFail = true;
@@ -140,7 +134,7 @@ public class BootFailureTest {
 
         // second failed boot
         problem = null;
-        runRecord = new ArrayList<String>();
+        runRecord = new ArrayList<>();
         assertNull(j.newHudson());
         assertEquals(2, bootFailures(home));
         assertEquals(Arrays.asList("1", "2"), runRecord);
@@ -155,25 +149,21 @@ public class BootFailureTest {
     }
 
     private static int bootFailures(File home) throws IOException {
-        return FileUtils.readLines(BootFailure.getBootFailureFile(home)).size();
+        return new BootFailure() { }.loadAttempts(home).size();
     }
 
     @Issue("JENKINS-24696")
     @Test
     public void interruptedStartup() throws Exception {
         final File home = tmpDir.newFolder();
-        j.with(new HudsonHomeLoader() {
-            @Override
-            public File allocate() throws Exception {
-                return home;
-            }
-        });
-        File d = new File(home, "boot-failure.groovy.d");
-        d.mkdirs();
-        FileUtils.write(new File(d, "1.groovy"), "hudson.util.BootFailureTest.runRecord << '1'");
+        j.with(() -> home);
+        Path d = home.toPath().resolve("boot-failure.groovy.d");
+        Files.createDirectory(d);
+        Files.writeString(d.resolve("1.groovy"), "hudson.util.BootFailureTest.runRecord << '1'", StandardCharsets.UTF_8);
         j.newHudson();
-        assertEquals(Collections.singletonList("1"), runRecord);
+        assertEquals(List.of("1"), runRecord);
     }
+
     @TestExtension("interruptedStartup")
     public static class PauseBoot extends ItemListener {
         @Override
@@ -184,6 +174,6 @@ public class BootFailureTest {
 
     // to be set by the script
     public static Exception problem;
-    public static List<String> runRecord = new ArrayList<String>();
+    public static List<String> runRecord = new ArrayList<>();
 
 }
